# EscarabajoRanchero

./: .gitignore  CMakeLists.txt  EscarabajoRanchero.project  EscarabajoRanchero.workspace  README.md
resources/audio/: map.txt
resources/font/: map.txt
resources/img/: map.txt  mask3-2.xcf  ordered.xcf  palette-beetle1.gpl  palette-beetle2.gpl  palette-beetle3.gpl  palette-beetle4.gpl
resources/level/: _default.txt  _defaultTest.txt  blah.txt  destr_1.txt  destr_2.txt  destr_3.txt  easy1.txt  easy2.txt  easy_1castlenarrow.txt  easy_1castlewide.txt  easy_2castles.txt  easy_nocastles.txt  lvl1.txt  lvl2.txt  lvl3.txt  lvl4.txt  lvl5.txt  ordered_1.txt  test.txt  worlds.txt
resources/level/15x15/: level.gpl  test.txt  weak.txt  wrap.txt
resources/music/: hryx_-_yiayotp.it  map.txt  notsnake_test.it  notsnake_test.xm  notsnake_test2.it
src/: Array2D.h  Audio.cpp  Audio.h  AudioSamples.h  CMakeLists.txt  CastleDetect.cpp  CastleDetect.h  Config.cpp  Config.h  DispatchEventHandler.cpp  DispatchEventHandler.h  DispatchHandler.cpp  DispatchHandler.h  DispatchKeyHandler.cpp  DispatchKeyHandler.h  Dispatcher.cpp  Dispatcher.h  GameContext.cpp  GameContext.h  GameFont.cpp  GameFont.h  GameInput.cpp  GameInput.h  GameObject.cpp  GameObject.h  GameSettings.cpp  GameSettings.h  Graphics.cpp  Graphics.h  Level.cpp  Level.h  LevelFactory.cpp  LevelFactory.h  LevelFileParser.cpp  LevelFileParser.h  LevelFileReader.cpp  LevelFileReader.h  LevelFileReaderPng.cpp  LevelFileReaderPng.h  LevelPiece.h  (+19 more)
src/Mac/: SDLMain.m
